@@ -1,11 +1,11 @@
+import doctest
+from doctest import DocTestSuite
 import unittest
 
 import zope.component
 from zope.component.testing import setUp, tearDown
 from zope.configuration.xmlconfig import XMLConfig
 from zope.site import hooks
-from zope.testing import doctest
-from zope.testing.doctestunit import DocTestSuite
 
 import plone.app.vocabularies
 
@@ -24,45 +24,43 @@ def vocabTearDown(self):
 
 
 def test_suite():
+    optionflags = doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE
     return unittest.TestSuite((
         DocTestSuite('plone.app.vocabularies.catalog',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
         DocTestSuite('plone.app.vocabularies.groups',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
         DocTestSuite('plone.app.vocabularies.language',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
         DocTestSuite('plone.app.vocabularies.security',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
         DocTestSuite('plone.app.vocabularies.skins',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
         DocTestSuite('plone.app.vocabularies.terms'),
         DocTestSuite('plone.app.vocabularies.types',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
         DocTestSuite('plone.app.vocabularies.users',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
         DocTestSuite('plone.app.vocabularies.workflow',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
        DocTestSuite('plone.app.vocabularies.editors',
                      setUp=vocabSetUp,
                      tearDown=vocabTearDown,
-                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+                     optionflags=optionflags),
         ))
-
-if __name__ == '__main__':
-    unittest.main(defaultTest='test_suite')
